add loopback axnetdevice

--- a/modules/axnet/Cargo.toml
+++ b/modules/axnet/Cargo.toml
@@ -29,8 +29,9 @@ axio = { path = "../../crates/axio" }
 [dependencies.smoltcp]
 #git = "https://github.com/rcore-os/smoltcp.git"
 #rev = "2ade274"
-git = "https://github.com/lhw2002426/smoltcp.git"
-rev = "e0b4765"
+#git = "https://github.com/lhw2002426/smoltcp.git"
+#rev = "e0b4765"
+path = "/root/loopback/smoltcp"
 default-features = false
 features = [
   "alloc", "log",   # no std
