--- a/modules/ruxnet/Cargo.toml
+++ b/modules/ruxnet/Cargo.toml
@@ -33,8 +33,9 @@ cty = { version = "0.2.2", optional = true }
 axio = { path = "../../crates/axio" }
 
 [dependencies.smoltcp]
-git = "https://github.com/rcore-os/smoltcp.git"
-rev = "2ade274"
+#git = "https://github.com/rcore-os/smoltcp.git"
+#rev = "2ade274"
+path = "/root/loopback/smoltcp"
 default-features = false
 features = [
   "alloc", "log",   # no std
