--- a/modules/ruxnet/Cargo.toml
+++ b/modules/ruxnet/Cargo.toml
@@ -19,6 +19,7 @@ log = "0.4"
 cfg-if = "1.0"
 spin = "0.9"
 driver_net = { path = "../../crates/driver_net" }
+flatten_objects = { path = "../../crates/flatten_objects" }
 lazy_init = { path = "../../crates/lazy_init" }
 lwip_rust = { path = "../../crates/lwip_rust", optional = true }
 printf-compat = { version = "0.1", default-features = false, optional = true }
