--- a/modules/ruxfs/Cargo.toml
+++ b/modules/ruxfs/Cargo.toml
@@ -43,8 +43,9 @@ axalloc = { path = "../axalloc", optional = true }
 memory_addr = "0.1.0"
 
 [dependencies.fatfs]
-git = "https://github.com/syswonder/rust-fatfs.git"
-rev = "bf8ad02"
+path = "/home/lhw/unix/rust-fatfs"
+#git = "https://github.com/syswonder/rust-fatfs.git"
+#rev = "bf8ad02"
 optional = true
 default-features = false
 features = [ # no std
