--- a/modules/ruxfs/Cargo.toml
+++ b/modules/ruxfs/Cargo.toml
@@ -27,6 +27,7 @@ default = ["devfs", "ramfs", "fatfs", "procfs", "sysfs", "etcfs"]
 
 [dependencies]
 log = "0.4"
+spin = "0.9"
 cfg-if = "1.0"
 lazy_init = { path = "../../crates/lazy_init" }
 capability = { path = "../../crates/capability" }
@@ -43,9 +44,8 @@ axalloc = { path = "../axalloc", optional = true }
 memory_addr = "0.1.0"
 
 [dependencies.fatfs]
-path = "/home/lhw/unix/rust-fatfs"
-#git = "https://github.com/syswonder/rust-fatfs.git"
-#rev = "bf8ad02"
+git = "https://github.com/syswonder/rust-fatfs.git"
+rev = "bf8ad02"
 optional = true
 default-features = false
 features = [ # no std
